--- a/public/index.html
+++ b/public/index.html
@@ -33,10 +33,139 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>React App</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
+    <style>
+      body {
+        background-color: #1f1f1f !important;
+      }
+      @keyframes rotate {
+        0% {
+          transform: rotate(0deg);
+        }
+        50% {
+          transform: rotate(180deg);
+        }
+        100% {
+          transform: rotate(360deg);
+        }
+      }
+      @keyframes rotate2 {
+        0% {
+          transform: rotate(0deg);
+          border-top-color: rgba(0, 0, 0, 0.5);
+        }
+        50% {
+          transform: rotate(180deg);
+          border-top-color: rgba(0, 0, 255, 0.5);
+        }
+        100% {
+          transform: rotate(360deg);
+          border-top-color: rgba(0, 0, 0, 0.5);
+        }
+      }
+      .parent {
+        display: flex;
+        position: absolute;
+        justify-content: center;
+        align-items: center;
+        height: 100%;
+        width: 100%;
+      }
+
+      .loader {
+        width: 150px;
+        height: 150px;
+        display: block;
+        overflow: hidden;
+        /* margin: auto; */
+        top: 50%;
+        bottom: 50%;
+      }
+      .loader div {
+        height: 100%;
+      }
+      /* loader 1 */
+      .loader1,
+      .loader1 div {
+        border-radius: 50%;
+        padding: 8px;
+        border: 2px solid transparent;
+        animation: rotate linear 3.5s infinite;
+        border-top-color: rgba(0, 0, 0, 0.5);
+        border-bottom-color: rgba(0, 0, 255, 0.5);
+      }
+      /*loader 2 */
+      .loader2,
+      .loader2 div {
+        border-radius: 50%;
+        padding: 8px;
+        border: 2px solid transparent;
+        animation: rotate linear 3.5s infinite;
+        border-top-color: rgba(0, 0, 255, 0.5);
+        border-left-color: rgba(0, 0, 0, 0.5);
+        border-right-color: rgba(0, 0, 0, 0.5);
+      }
+      /*loader 3 */
+      .loader3,
+      .loader3 div {
+        border-radius: 50%;
+        padding: 8px;
+        border: 2px solid transparent;
+        animation: rotate linear 3.5s infinite;
+        border-top-color: rgba(0, 0, 0, 0.5);
+        border-left-color: rgba(0, 0, 255, 0.5);
+        animation-timing-function: cubic-bezier(0.55, 0.38, 0.21, 0.88);
+        animation-duration: 3s;
+      }
+      /* loader 4 */
+      .loader4,
+      .loader4 div {
+        border-radius: 50%;
+        padding: 8px;
+        border: 2px solid transparent;
+        animation: rotate linear 3.5s infinite;
+        border-radius: 50%;
+        padding: 4px;
+        animation: rotate2 4s infinite linear;
+      }
+      div:hover {
+        animation-play-state: paused;
+      }
+      .loader,
+      .loader * {
+        will-change: transform;
+      }
+    </style>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi"
+      crossorigin="anonymous"
+    />
   </head>
-  </head>
-  <body>
+  <body onload="myFunction()">
+    <div class="parent">
+      <div id="loader" class="loader loader4">
+        <div>
+          <div>
+            <div>
+              <div>
+                <div>
+                  <div>
+                    <div>
+                      <div>
+                        <div>
+                          <div></div>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
@@ -49,7 +178,21 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js" integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.min.js" integrity="sha384-IDwe1+LCz02ROU9k972gdyvl+AESN10+x7tBKgc9I5HFtuNz0wWnPclzo6p9vxnk" crossorigin="anonymous"></script>
+    <script>
+      const myFunction = () => {
+        const loader = document.getElementById("loader");
+        loader.style.display = "none";
+      };
+    </script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
+      integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.min.js"
+      integrity="sha384-IDwe1+LCz02ROU9k972gdyvl+AESN10+x7tBKgc9I5HFtuNz0wWnPclzo6p9vxnk"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
